force-app/main/default/objects/Einstein_AI__mdt/Einstein_AI__mdt.object-meta.xml
<CustomObject>
    <label>Einstein AI</label>
    <pluralLabel>Einstein AI</pluralLabel>
</CustomObject>