force-app/main/default/objects/Einstein_AI__mdt/fields/aud__c.field-meta.xml
<CustomField>
    <fullName>aud__c</fullName>
    <label>aud</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>