force-app/main/default/objects/Einstein_AI__mdt/fields/exp__c.field-meta.xml
<CustomField>
    <fullName>exp__c</fullName>
    <label>exp</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>