force-app/main/default/objects/Einstein_AI__mdt/fields/iss__c.field-meta.xml
<CustomField>
    <fullName>iss__c</fullName>
    <label>iss</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>