force-app/main/default/objects/Einstein_AI__mdt/fields/sub__c.field-meta.xml
<CustomField>
    <fullName>sub__c</fullName>
    <label>sub</label>
    <length>80</length>
    <type>Text</type>
</CustomField>